--- a/samples/bootstrap.html
+++ b/samples/bootstrap.html
@@ -47,7 +47,10 @@
     // Wait until the DOM can be manipulated safely
     $(function () {
       // Convert some controls to select2 with the bootstrap look&feel
-      $('.select2-bootstrap select').select2()
+      $('.select2-bootstrap select').select2({
+        allowClear: true,
+        placeholderOption: 'first'
+      })
       // Pre-select Austria and Hungary
         .select2('val', ['at', 'hu']);
     });
@@ -57,7 +60,7 @@
   <body>
 
     <div class="select2-bootstrap">
-      <h3>Bootstrap</h3>
+      <h4>Bootstrap</h4>
       <p>The Bootstrap mode depends on the full <code>select2.css</code> which includes the native styling.  It is pre-selected as the default theme after including <code>select2-bootstrap.js</code>, because Bootstrap cannot be easily combined with other GUI frameworks on a single page and once included, it is used completely.</p>
       <pre>
   &lt;link rel="stylesheet" href="select2.css"&gt;
@@ -66,6 +69,7 @@
   &lt;script src="select2-bootstrap.js"&gt;&lt;/script&gt;
   $('...').select2();</pre>
       <select>
+        <option>Select country...</option>
         <option value="at">Austria</option>
         <option value="cz">Czech Republic</option>
         <option value="de">Germany</option>
@@ -73,6 +77,7 @@
         <option value="pl">Poland</option>
       </select>
       <select multiple>
+        <option>Select country...</option>
         <option value="at">Austria</option>
         <option value="cz">Czech Republic</option>
         <option value="de">Germany</option>
