--- a/samples/main.html
+++ b/samples/main.html
@@ -53,11 +53,18 @@
     // Wait until the DOM can be manipulated safely
     $(function () {
       // Convert some controls to select2 with the native look&feel
-      $('.select2-native select').select2()
+      $('.select2-native select').select2({
+        allowClear: true,
+        placeholderOption: 'first'
+      })
       // Pre-select Austria and Hungary
         .select2('val', ['at', 'hu']);
       // Convert some controls to select2 with the jqui look&feel
-      $('.select2-jquery-ui select').select2({ theme: 'jquery-ui' })
+      $('.select2-jquery-ui select').select2({
+        theme: 'jquery-ui',
+        allowClear: true,
+        placeholderOption: 'first'
+      })
       // Pre-select Austria and Hungary
         .select2('val', ['at', 'hu']);
       $('.select2-jquery-ui button').button();
@@ -74,7 +81,8 @@
   &lt;link rel="stylesheet" href="select2.css"&gt;
   &lt;script src="select2.js"&gt;&lt;/script&gt;
   $('...').select2();</pre>
-      <select id="first">
+      <select>
+        <option>Select country...</option>
         <option value="at">Austria</option>
         <option value="cz">Czech Republic</option>
         <option value="de">Germany</option>
@@ -82,6 +90,7 @@
         <option value="pl">Poland</option>
       </select>
       <select multiple>
+        <option>Select country...</option>
         <option value="at">Austria</option>
         <option value="cz">Czech Republic</option>
         <option value="de">Germany</option>
@@ -106,6 +115,7 @@
   $.fn.select2.defaults.theme_default = 'jquery-ui';</pre>
       </div>
       <select>
+        <option>Select country...</option>
         <option value="at">Austria</option>
         <option value="cz">Czech Republic</option>
         <option value="de">Germany</option>
@@ -113,6 +123,7 @@
         <option value="pl">Poland</option>
       </select>
       <select multiple>
+        <option>Select country...</option>
         <option value="at">Austria</option>
         <option value="cz">Czech Republic</option>
         <option value="de">Germany</option>
